# reAA

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  EXCEL_STRUCTURE_ANALYSIS_REPORT.md  IMPLEMENTATION_PLAN.md  TECH_STACK_DJANGO6.md  analyze_excel.py  check_gk2a_urls.py  check_weather_urls.py  excel_analysis_result.json  extract_all_data.py  extract_vba.py  nixpacks.toml  patch_dpb.py  pyproject.toml  requirements.txt  test_all_pages.py  test_local.py  test_mobile_input.py  test_render.py  test_resize.py  test_satellite.py  test_satellite_final.py  test_timeseries.py  경주대종천하류보20250501_unlocked.xlsm
config/: settings.py  urls.py
core/: models.py  tracking.py
docs/: APP_ROADMAP.md  DATA_FLOW_ISSUE_REPORT.md  UI_DESIGN.md  대화기록_박승혁.md  박승혁_제안_종합분석.md
extracted_vba/: Module1.bas.vb  Module2.bas.vb  Sheet1.cls.vb  Sheet10.cls.vb  Sheet11.cls.vb  Sheet12.cls.vb  Sheet14.cls.vb  Sheet15.cls.vb  Sheet16.cls.vb  Sheet18.cls.vb  Sheet2.cls.vb  Sheet3.cls.vb  Sheet4.cls.vb  Sheet5.cls.vb  Sheet50.cls.vb  Sheet6.cls.vb  Sheet7.cls.vb  Sheet8.cls.vb  Sheet9.cls.vb  ThisWorkbook.cls.vb  ufChart.frm.vb  ufSelCal.frm.vb  기본입력.frm.vb  사전불확실도.frm.vb  중복정보.frm.vb
hydro/: dam_discharge_service.py  gee_service.py  models.py  station_data.py  urls.py  views.py
measurement/: models.py  pdf_service.py  urls.py  views.py
resource/: 구길교_시간격데이터_샘플.csv  구현_계획서.md  대종천_분석결과표.csv  한국수자원공사_수위관측소 제원정보_20220502.csv  한국수자원공사_수위관측소 제원정보_20220502.parquet
satellite/: models.py  services.py  urls.py  views.py
scripts/: convert_stations_json.py  csv_to_parquet.py  (+1 more)
(+215 files in other folders)
