[project]
name = "discharge-measurement"
version = "0.1.0"
description = "ISO 748 기반 유량측정 불확실도 분석 시스템"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=6.0",
    "django-allauth>=65.0",
    "django-htmx>=1.27.0",
    "gunicorn>=23.0.0",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "PyJWT>=2.8",
    "cryptography>=42.0",
    "reportlab>=4.4.6",
    "scipy>=1.14.0",
    "whitenoise>=6.11.0",
    "xlrd>=2.0.2",
    "requests>=2.31",
    "pillow>=10.0",
]

[project.scripts]
runserver = "manage:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-django>=4.5.0",
]
